5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1575_996.log
== SUBMITION (2019-03-12 11:28:47) 
-- CODE:
print("***** ")
print("* ° ° * ")
print("  ^  ")
print("___")
print("***** ")
-- EXECUTION TIME:
0.260152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/996/main.py", line 2, in <module>
    print("* \xb0 \xb0 * ")
UnicodeEncodeError: 'ascii' codec can't encode character '\xb0' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:28:56) 
-- CODE:
print("***** ")
print("* ° ° * ")
print("  ^  ")
print("___")
print("*****")
-- EXECUTION TIME:
0.151266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/996/main.py", line 2, in <module>
    print("* \xb0 \xb0 * ")
UnicodeEncodeError: 'ascii' codec can't encode character '\xb0' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:29:00) 
-- CODE:
print("***** ")
print("* ° ° * ")
print("  ^  ")
print("___")
print("*****")
-- EXECUTION TIME:
0.150955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/996/main.py", line 2, in <module>
    print("* \xb0 \xb0 * ")
UnicodeEncodeError: 'ascii' codec can't encode character '\xb0' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:29:09) 
-- CODE:
print("***** ")
print("* ° ° *")
print("  ^  ")
print("___")
print("*****")
-- EXECUTION TIME:
0.198276
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/996/main.py", line 2, in <module>
    print("* \xb0 \xb0 *")
UnicodeEncodeError: 'ascii' codec can't encode character '\xb0' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:29:11) 
-- CODE:
print("***** ")
print("* ° ° *")
print("  ^  ")
print("___")
print("*****")
-- EXECUTION TIME:
0.185982
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/996/main.py", line 2, in <module>
    print("* \xb0 \xb0 *")
UnicodeEncodeError: 'ascii' codec can't encode character '\xb0' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:14) 
-- CODE:
print("***** ")
print("* ° ° *")
print("  ^  ")
print("___")
print("*****")
-- OUTPUT:
***** 
* ° ° *
  ^  
___
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:19) 
-- CODE:
print("***** ")
print("* ° ° *")
print("  ^  ")
print("___")
print("*****")
-- OUTPUT:
***** 
* ° ° *
  ^  
___
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:29:24) 
-- CODE:
print("***** ")
print("* ° ° *")
print("  ^  ")
print("___")
print("*****")
-- OUTPUT:
***** 
* ° ° *
  ^  
___
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:17) 
-- CODE:
print("***** ")
print("* O O *")
print("  ^  ")
print("___")
print("*****")
-- OUTPUT:
***** 
* O O *
  ^  
___
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:23) 
-- CODE:
print("*****")
print("* O O *")
print("  ^  ")
print("___")
print("*****")
-- OUTPUT:
*****
* O O *
  ^  
___
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:29) 
-- CODE:
print("*****")
print("* O O *")
print("  ^  ")
print("___")
print("*****")
-- OUTPUT:
*****
* O O *
  ^  
___
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:41) 
-- CODE:
print("*****")
print("* O O *")
print("  ^  ")
print(" ___ ")
print("*****")
-- OUTPUT:
*****
* O O *
  ^  
 ___ 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:04) 
-- CODE:
print("*****")
print("*O O*")
print("  ^  ")
print(" ___ ")
print("*****")
-- OUTPUT:
*****
*O O*
  ^  
 ___ 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:12) 
-- CODE:
print("*****")
print("*O O*")
print("  ^  ")
print(" ___ ")
print("*****")
-- OUTPUT:
*****
*O O*
  ^  
 ___ 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:18) 
-- CODE:
print("*****")
print("*O O*")
print("  ^  ")
print(" ___ ")
print("*****")
-- OUTPUT:
*****
*O O*
  ^  
 ___ 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:07) 
-- CODE:
print(" ***** ")
print("* O O* ")
print("*  ^  *")
print("* ___ *")
print(" ***** ")
-- OUTPUT:
***** 
* O O* 
*  ^  *
* ___ *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:19) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* ___ *")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* ___ *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:50) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* ___ *")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* ___ *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:53) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* ___ *")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* ___ *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:27) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^ * ")
print("* ___* ")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^ * 
* ___* 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:37) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* ___* ")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* ___* 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:49) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* ___ *")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* ___ *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:34:19) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:34:22) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:09) 
-- CODE:
print   ***** 
print("* O O *")
print  *  ^  *
print  * --- *
print   ***** 
-- ERROR:
File "XXXX", line 1
    print   ***** 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:15) 
-- CODE:
print   ***** 
print("* O O *")
print  *  ^  *
print  * --- *
print   ***** 
-- ERROR:
File "XXXX", line 1
    print   ***** 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:24) 
-- CODE:
print   ***** 
print("* O O *")
print  *  ^  *
print  * --- *
print   ***** 
-- ERROR:
File "XXXX", line 1
    print   ***** 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:42) 
-- CODE:
print   ***** 
print( * O O * )
print  *  ^  *
print  * --- *
print   ***** 
-- ERROR:
File "XXXX", line 1
    print   ***** 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:50) 
-- CODE:
print   ***** 
print( * O O * )
print  *  ^  *
print  * --- *
print   ***** 
-- ERROR:
File "XXXX", line 1
    print   ***** 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:36:35) 
-- CODE:
print   ***** 
print( * O O * )
print  *  ^  *
print  * --- *
print   ***** 
-- ERROR:
File "XXXX", line 1
    print   ***** 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:39:44) 
-- CODE:
print(" ***** ")
print("* O O *")
print("*  ^  *")
print("  ---  ")
print(" ***** ")
-- OUTPUT:
***** 
* O O *
*  ^  *
  ---  
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:40:45) 
-- CODE:
print("  ***** ")
print("(* O O *)")
print(" *  ^  *")
print("   ---  ")
print("  ***** ")
-- OUTPUT:
***** 
(* O O *)
 *  ^  *
   ---  
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:40:57) 
-- CODE:
print("  ***** ")
print("(* O O *)")
print(" *  ^  *")
print("   ---  ")
print("  ***** ")
-- EXECUTION TIME:
0.17672
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* O O *)
 *  ^  *
   ---  
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:41:16) 
-- CODE:
print("  *****")
print("(* O O *)")
print(" *  ^  *")
print("   ---")
print("  *****")
-- OUTPUT:
*****
(* O O *)
 *  ^  *
   ---
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:41:23) 
-- CODE:
print("  *****")
print("(* O O *)")
print(" *  ^  *")
print("   ---")
print("  *****")
-- EXECUTION TIME:
0.138703
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* O O *)
 *  ^  *
   ---
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:41:29) 
-- CODE:
print("  *****")
print("(* O O *)")
print(" *  ^  *")
print("   ---")
print("  *****")
-- OUTPUT:
*****
(* O O *)
 *  ^  *
   ---
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:41:54) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print("   ---")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
   ---
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:41:57) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print("   ---")
print("  *****")
-- EXECUTION TIME:
0.17464
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
   ---
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:07) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print("   ---")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
   ---
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:27) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" *  ---*")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 *  ---*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:39) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * ---*")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * ---*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:42:44) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:42:48) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.16267
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:07) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:08) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:10) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:23) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****"
-- ERROR:
File "XXXX", line 6
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:36:28) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****"
-- EXECUTION TIME:
0.178975
-- ERROR:
  File "/home/codebench/codes/1575/996/main.py", line 6
    
                   ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:36:40) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")

-- EXECUTION TIME:
0.150562
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
